优化背景图片bug

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
             }
 
             #reg_form {
-                margin: 50px auto;
+                margin: 180px auto;
                 width: 600px;
             }
 
@@ -31,7 +31,9 @@
                padding-top: 10px;
             }
             body {
-                background: url("../static/images/login.jpg") no-repeat;
+                background: url("../static/images/login_bg.jpg") no-repeat ;
+                background-size:100% 100%;
+                background-attachment: fixed;
             }
         </style>
         <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
