新增用户中心，并优化了登录界面动画，增加404页面

--- a/templates/reg.html
+++ b/templates/reg.html
@@ -47,7 +47,7 @@
                     <tr><td>密码：</td><td><input type="password" id="upass" name="upass" placeholder="登录密码"></td></tr>
                     <tr><td>确认密码：</td><td><input type="password" id="upass2" name="upass2" placeholder="确认密码"></td></tr>
                     <tr><td>手机号：</td><td><input type="text" id="phone" name="phone" placeholder="手机号"></td></tr>
-                    <tr><td>邮箱：</td><td><input type="email" id="email" name="email" placeholder="电子邮箱""><button type="button" id="send_sms_code">发送验证码</button></td></tr>
+                    <tr><td>邮箱：</td><td><input type="email" id="email" name="email" placeholder="电子邮箱"">
                     <tr><td>验证码：</td><td><input type="text" id="verify_code" name="verify_code" placeholder="邮箱验证码"></td></tr>
                     <tr><td></td><td><button type="submit">注册</button></td></tr>
                 </table>
