--- a/templates/login.html
+++ b/templates/login.html
@@ -1,58 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>欢迎登录！</title>
 
-        <style>
-            * {
-                margin: 0;
-                padding: 0;
-            }
+	<head lang="en">
+		<meta charset="UTF-8">
+		<title>登录</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="format-detection" content="telephone=no">
+		<meta name="renderer" content="webkit">
+		<meta http-equiv="Cache-Control" content="no-siteapp" />
 
-            input {
-                margin-right: 5px;
-                height: 30px;
-                padding: 0 5px;
-            }
+		<link rel="stylesheet" href="../static/css/amazeui.css" />
+		<link href="../static/css/dlstyle.css" rel="stylesheet" type="text/css">
+	</head>
 
-            button {
-                height: 30px;
-                padding: 0 5px;
-            }
-
-            #reg_form {
-                margin: 180px auto;
-                width: 600px;
-            }
-
-            #reg_form td {
-               padding-top: 10px;
-            }
-            body {
-                background: url("../static/images/login_bg.jpg") no-repeat ;
-                background-size:100% 100%;
-                background-attachment: fixed;
-            }
-        </style>
-        <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/common.js') }}"></script>
-    </head>
-    <body>
+	<body>
         {% if login_fail %}
         <script>
             alert("用户名或密码错误，请重新登录！");
         </script>
         {% endif %}
-        <div id="reg_form">
-            <form action="/login" method="POST">
-                <table>
-                    <tr><td>用户名：</td><td><input type="text" id="uname" name="uname" placeholder="用户名" autofocus></td></tr>
-                    <tr><td>密码：</td><td><input type="password" id="upass" name="upass" placeholder="登录密码"></td></tr>
-                    <tr><td></td><td><button type="submit">登录</button></td></tr>
-                </table>
-            </form>
-        </div>
-    </body>
+        
+		<div class="login-boxtitle">
+			<a href="home.html"><img alt="logo" src="../images/logobig.png" /></a>
+		</div>
+
+		<div class="login-banner">
+			<div class="login-main">
+				<div class="login-banner-bg"><span></span><img src="../images/big.jpg" /></div>
+				<div class="login-box">
+
+							<h3 class="title">登录商城</h3>
+
+							<div class="clear"></div>
+						
+						<div class="login-form">
+						  <form action="/login" method="POST">
+							   <div class="user-name">
+								    <label for="user"><i class="am-icon-user"></i></label>
+								    <input type="text" id="uname" name="uname" placeholder="用户名" autofocus >
+                 </div>
+                 <div class="user-pass">
+								    <label for="password"><i class="am-icon-lock"></i></label>
+								    <input type="password" id="upass" name="upass" placeholder="请输入密码">
+				 </div>
+				 <div class="am-cf">
+					<input type="submit" name="" value="登 录" class="am-btn am-btn-primary am-btn-sm">
+				</div>
+              </form>
+           </div>
+            
+            <div class="login-links">
+								<a href="/reg" class="zcnext am-fr am-btn-default">注册</a>
+								<br />
+            </div>
+								
+
+				</div>
+			</div>
+		</div>
+					</div>
+	</body>
 </html>
