--- a/static/css/amazeui.css
+++ b/static/css/amazeui.css
@@ -386,7 +386,7 @@ th {
  */
 html {
   font-size: 10px;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: #88ada6;
 }
 body {
   position: relative;
