--- a/static/css/dlstyle.css
+++ b/static/css/dlstyle.css
@@ -102,7 +102,7 @@ form,.am-cf,.partner{max-width:640px;margin:20px auto ;}
 .login-box2 {height:430px;}
 .login-boxtitle {max-width: 1000px;margin: 0px auto;height: 60px;}
 .login-boxtitle img{height:60px;}
-.login-banner,.res-banner{width:100%;height:470px; background:#fd7a72;}
+.login-banner,.res-banner{width:100%;height:470px; background:#88ada6;}
 .login-main,.res-main{max-width:1000px;height:470px; margin:0px auto; position:relative;}
 
 /*头部*/
