--- a/templates/reg.html
+++ b/templates/reg.html
@@ -15,40 +15,29 @@
                 background-size:100% 100%;
                 background-attachment: fixed;
             }
-            input {
-                margin-right: 5px;
-                height: 30px;
-                padding: 0 5px;
-            }
-
-            button {
-                height: 30px;
-                padding: 0 5px;
-            }
-
             #reg_form {
                 margin: 80px auto;
                 width: 400px;
                 float: right;
             }
-
             #reg_form td {
                padding-top: 10px;
             }
         </style>
+        <link href="../static/css/layui.css" rel="stylesheet" media="all">
         <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/common.js') }}"></script>
     </head>
     <body>
         <div id="reg_form">
-            <form action="/reg" method="POST">
+            <form action="/reg" method="POST" class="layui-form">
                 <table>
-                    <tr><td>用户名：</td><td><input type="text" id="uname" name="uname" placeholder="用户名" autofocus><span id="uname_tips"></span></td></tr>
-                    <tr><td>密码：</td><td><input type="password" id="upass" name="upass" placeholder="登录密码"></td></tr>
-                    <tr><td>确认密码：</td><td><input type="password" id="upass2" name="upass2" placeholder="确认密码"></td></tr>
-                    <tr><td>手机号：</td><td><input type="text" id="phone" name="phone" placeholder="手机号"></td></tr>
-                    <tr><td>邮箱：</td><td><input type="email" id="email" name="email" placeholder="电子邮箱">
-                    <tr><td></td><td><button type="submit">注册</button></td></tr>
+                    <tr><td>用户名：</td><td><input class="layui-input" type="text" id="uname" name="uname" placeholder="用户名" autofocus><span id="uname_tips"></span></td></tr>
+                    <tr><td>密码：</td><td><input class="layui-input" type="password" id="upass" name="upass" placeholder="登录密码"></td></tr>
+                    <tr><td>确认密码：</td><td><input class="layui-input" type="password" id="upass2" name="upass2" placeholder="确认密码"></td></tr>
+                    <tr><td>手机号：</td><td><input class="layui-input" type="text" id="phone" name="phone" placeholder="手机号"></td></tr>
+                    <tr><td>邮箱：</td><td><input class="layui-input" type="email" id="email" name="email" placeholder="电子邮箱">
+                    <tr><td></td><td><button class="layui-btn layui-btn-normal" type="submit">注册</button></td></tr>
                 </table>
             </form>
         </div>
