--- a/templates/user_center.html
+++ b/templates/user_center.html
@@ -9,14 +9,15 @@
 
 		<link href="../static/css/admin.css" rel="stylesheet" type="text/css">
 		<link href="../static/css/amazeui.css" rel="stylesheet" type="text/css">
-
+		<link href="../static/css/layui.css" rel="stylesheet" media="all">
 		<link href="../static/css/personal.css" rel="stylesheet" type="text/css">
-
-		<script src="../static/js/jquery.min.js" type="text/javascript"></script>
+		<script src="../static/js/jquery-3.4.1.min.js" type="text/javascript"></script>
 		<script src="../static/js/amazeui.js" type="text/javascript"></script>
-		
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><style type="text/css">
-</style></head>
+		<script src="../static/js/user.js"></script>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<style type="text/css">
+		</style>
+	</head>
 
 	<body>
 		<!--头 -->
@@ -26,60 +27,66 @@
 					<!--顶部导航条 -->
 					<div class="am-container header">
 						<ul class="message-l">
-							<div class="topMessage">
-								<div class="menu-hd">
 									<p>{{ u }},欢迎你！<a href="/logout">点我注销</a></p>
-								</div>
-							</div>
 						</ul>
-						<ul class="message-r">
-							<div class="topMessage favorite">
-								<div class="menu-hd"><a href="#" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
-						</ul>
-						</div>
 					</div>
 				</div>
 			</article>
 		</header>
 		<div class="center">
 			<div class="col-main">
-				<div align="center"><table width="911" height="251" border="1" align="center" cellspacing="10" bordercolor="#1A1A1A" bgcolor="#FFFFFF">
-					<caption class="admin-header">
-					  用户信息
-					  <br>
-					  <br>
-					  <br>
-					</caption>
-					<tr>
-					  <td width="152" bordercolor="#333333" class="admin-task-bd"><p class="am-text-lg am-text-lg STYLE1">用户名：</p>      </td>
-					  <td width="189" bordercolor="#000000">{{ u }}</td>
-					</tr>
-					<tr>
-					  <td bordercolor="#333333" class="admin-task-bd am-text-lg am-text-lg STYLE1">电话：</td>
-					  <td bordercolor="#000000">{{ p }}</td>
-					</tr>
-					<tr>
-					  <td bordercolor="#333333" class="admin-task-bd am-text-lg am-text-lg STYLE1">邮箱：</td>
-					  <td bordercolor="#000000">{{ e }}</td>
-					</tr>
-					<tr>
-					  <td bordercolor="#333333" class="admin-task-bd am-text-lg am-text-lg STYLE1">注册时间：</td>
-					  <td bordercolor="#000000">{{ r }}</td>
-					</tr>
-				  </table>
-				  </div>
+				<div align="center" id="info">
+					<table width="727" height="251" border="1" align="center" cellspacing="10" bordercolor="#1A1A1A" bgcolor="#FFFFFF">
+						<caption class="admin-header">
+						用户信息
+						<br><br><br>
+						</caption>
+						<tr>
+						<td width="152" bordercolor="#333333" class="admin-task-bd"><p class="am-text-lg am-text-lg STYLE1">用户名：</p>      </td>
+						<td width="189" bordercolor="#000000">{{ u }}</td>
+						</tr>
+						<tr>
+						<td bordercolor="#333333" class="admin-task-bd am-text-lg am-text-lg STYLE1">电话：</td>
+						<td bordercolor="#000000">{{ p }}</td>
+						</tr>
+						<tr>
+						<td bordercolor="#333333" class="admin-task-bd am-text-lg am-text-lg STYLE1">邮箱：</td>
+						<td bordercolor="#000000">{{ e }}</td>
+						</tr>
+						<tr>
+						<td bordercolor="#333333" class="admin-task-bd am-text-lg am-text-lg STYLE1">注册时间：</td>
+						<td bordercolor="#000000">{{ r }}</td>
+						</tr>
+					</table>
+				</div>
+
+				<div align="center" id="message" class="pages">
+					<p>你还没有评论哦！</p>
+
+				</div>
+				<div align="center" id="collect" class="pages">
+					<p>你还没有收藏视频哦！</p>
+			
+			  	</div>
 			</div>
 
 			<aside class="menu">
 				<ul>
 					<li class="person">
-						<a href="/">回到主页</a>
+						<button type="button" id="my_info" class="layui-btn layui-btn-primary">我的信息</button>
 					</li>
+					<li class="person">
+						<button type="button" id="my_message" class="layui-btn layui-btn-primary">我的留言</button>
+					</li>
+					<li class="person">
+						<button type="button" id="my_collect" class="layui-btn layui-btn-primary">我的收藏</button>
+					</li>
+					<li class="person">
+					</li>
+					<li class="person">
+					</li>		
 				</ul>
-
 			</aside>
 		</div>
-
 	</body>
-
 </html>
