增加临时主页和网站图标

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 		<meta name="format-detection" content="telephone=no">
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
-
+		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 		<link rel="stylesheet" href="../static/css/amazeui.css" />
 		<link href="../static/css/dlstyle.css" rel="stylesheet" type="text/css">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
@@ -47,15 +47,14 @@
            </div>
             
             <div class="login-links">
-								<a href="/reg" class="zcnext am-fr am-btn-default">注册</a>
-								<br />
+				<a href="/reg" class="zcnext am-fr am-btn-default">注册</a>
+				<br />
             </div>
 								
 
-				</div>
+			</div>
 			</div>
 		</div>
-					</div>
-                    <div align="right"></div>
+	</div>
 </body>
 </html>
