--- a/templates/reg.html
+++ b/templates/reg.html
@@ -25,6 +25,7 @@
             }
         </style>
         <link href="../static/css/layui.css" rel="stylesheet" media="all">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/common.js') }}"></script>
     </head>
