--- a/templates/user_center.html
+++ b/templates/user_center.html
@@ -11,8 +11,8 @@
 		<link href="../static/css/amazeui.css" rel="stylesheet" type="text/css">
 		<link href="../static/css/layui.css" rel="stylesheet" media="all">
 		<link href="../static/css/personal.css" rel="stylesheet" type="text/css">
+		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 		<script src="../static/js/jquery-3.4.1.min.js" type="text/javascript"></script>
-		<script src="../static/js/amazeui.js" type="text/javascript"></script>
 		<script src="../static/js/user.js"></script>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<style type="text/css">
